Ho l'ansia e voglia di crepare
Impostata logica per aggiungere prodotti
Aggiunto un metodo a ProductCat per recuperare enum a partire dalla stringa
Mi ammazzo la vita
Sorrido sempre ciao